Working on right navbar; Fade in on clip, gap, fixing font and logo sizes. Need to work on extras icon rotation on hover (+) and navbar to the top of the screen.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap')
 /* Make Inverted color style */
 * {
     margin: 0;
@@ -10,33 +9,23 @@ html, body {
     scroll-behavior: smooth;
 }
 body {
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
-    font-family: 'Titillium Web,' Arial, Helvetica, sans-serif;
+    font-family: "Titillium Web"; 
 /* fix fonts */
 }
 
 main {
     width: calc(100% - var(--navWidth));
     overflow-y: scroll;
-    height: 100%;
+    height: fit-content;
+    color: var(--darkMode);
+    background-color: var(--lightMode);
     /* Make custom scrollbar */
 }
 
 nav {
     width: var(--navWidth);
     height: 100%;
+    overflow: hidden;
     
     position: absolute;
     right: 0;
@@ -47,8 +36,37 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 2vh;
     flex-direction: column;
 }
 nav > .logo {
-    width: 80%;
+    width: 70%;
+}
+.letterDayOfTheWeek, .extras {
+    color: var(--lightMode);
+    opacity: 60%;
+    text-decoration: none;
+    font-size: clamp(1vmin, 2vw, 3.5vmax);
+}
+
+.letterDayOfTheWeek:hover, .extras:hover {
+    transition: opacity 0.3s ease-out;
+    opacity: 100%;
+    cursor: pointer;
+    /* Line underneath going outwards (jsfiddle) */
+}
+
+.extras:hover {
+    transition: transform 0.25s ease-in-out;
+    transform: rotate(180deg);
+}
+hr {
+    width: 50%;
+}
+
+@media only screen and (max-width:500px) {
+    body {
+        background-color: red;
+        /* Make navbar at top */
+    }
 }
